# tokenbot

./: .dockerignore  .gitignore  README.md  bot.Dockerfile  docker-compose.yml  web.Dockerfile
.github/workflows/: tokenbot.yaml
bot/: .env.example  main.js  package-lock.json  package.json
charts/tokenbot/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
charts/tokenbot/files/: gcs_upload.tpl  redis_dump.tpl
charts/tokenbot/templates/: NOTES.txt  _custom_helpers.tpl  _helpers.tpl  backupCronjob.yaml  backupSecrets.yaml  configMaps.yaml  cronjob.yaml  deployments.yaml  (+7 more)
dev/: package.json
engine/: .dockerignore  .env.example  .gitignore  .ocamlformat  dune-project  justfile  msg.example.json  tokenbot.opam
engine/lib/: Clock.ml  Dice.ml  Fetch.ml  Fun.ml  Red.ml  Slack.ml  dune
engine/src/: Cashier.ml  Contract.ml  Cooldown.ml  DB.ml  Deposit.ml  Engine.ml  Feed.ml  Fetch.ml  Fun.ml  Holiday.ml  Inventory.ml  Item.ml  Mentions.ml  Msg.ml  NotifierAPI.ml  Participant.ml  Player.ml  PlayerDB.ml  Redis.ml  Reporter.ml  Rules.ml  Score.ml  Scoreboard.ml  Slack.ml  Stats.ml  System.ml  Thanks.ml  ThanksDB.ml  Token.ml  Tokens.ml  Txn.ml  User.ml  dune
engine/test/: Deposit_test.ml  Engine_Cashier_collect_test.ml  Engine_Cashier_distribute_test.ml  Engine_Cashier_execute_test.ml  Engine_Messenger_test.ml  Engine_Receptionist_test.ml  Item_test.ml  Rules_test.ml  Test_util.ml  Token_test.ml  cooldown_test.ml  dune
web/: .env.example  .eslintrc.json  .npmrc  README.md  contract.ts  metrics.js  middleware.ts  package-lock.json  package.json  server.js  tailwind.config.js
web/app/: fonts.tsx  globals.css
web/auth/: config.ts  session.ts  slackProvider.ts
web/io/: engine.ts  player.ts  red.ts  slack.ts
web/util/: emoji.ts  fmt.ts
(+33 files in other folders)
