(library
 (name fun)
 (libraries redis-sync yojson)
 (modules Fun)
 (preprocess
  (pps lwt_ppx ppx_deriving.show ppx_fields_conv ppx_regexp ppx_yojson_conv)))

(library
 (name clock)
 (libraries unix)
 (modules clock))

(library
 (name dice)
 (modules Dice))

(library
 (name red)
 (libraries fun redis-sync)
 (modules Red))

(library
 (name fetch)
 (libraries fun cohttp cohttp-lwt-unix)
 (modules Fetch)
 (preprocess
  (pps lwt_ppx)))

(library
 (name slack)
 (libraries fun fetch)
 (modules Slack)
 (preprocess
  (pps lwt_ppx ppx_deriving.show ppx_fields_conv ppx_regexp ppx_yojson_conv)))

(env
 (dev
  (flags
   (:standard -w -9 -w -33))))
