(library
 (name tokenbot)
 (public_name tokenbot)
 (libraries cohttp cohttp-lwt-unix ppx_let redis-sync str yojson)
 (inline_tests)
 (preprocess
  (pps
   ppx_deriving.make
   ppx_deriving.ord
   ppx_deriving.show
   ppx_expect
   ppx_fields_conv
   ppx_inline_test
   ppx_let
   ppx_regexp
   ppx_sexp_conv
   ppx_yojson_conv)))

(env
 (dev
  (flags
   (:standard -w -9))))
